--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
@@ -13,17 +14,19 @@
         android:padding="10dp"
         android:text="@string/task_list_text"
         android:textColor="@color/black"
-        android:textSize="26sp"
-        />
+        android:textSize="26sp" />
+
     <EditText
-        android:layout_below="@id/textView"
         android:id="@+id/editText"
-        android:padding="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/textView"
         android:hint="@string/edit_task_hint"
-        android:textColorHint="@color/black"
-        android:textColor="@color/black"/>
+        android:padding="20dp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black" />
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -35,38 +38,26 @@
             android:id="@+id/add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="onAddClicked"
             android:text="@string/add_btn"/>
-        <Button
-            android:id="@+id/delete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/delete_btn"
-            android:layout_marginStart="70dp"/>
+
         <Button
             android:id="@+id/clear"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="@string/clear_btn"
+            android:onClick="onClearClicked"
             android:layout_marginStart="60dp"/>
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:padding="10dp"
-        android:layout_below="@id/linearLayout1"
-        android:text=""
-        android:textSize="20sp"
-        android:textColor="@color/black"
-        />
 
-    <ListView
-        android:id="@+id/listView"
-        android:layout_width="wrap_content"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/textView1"
+        android:layout_below="@id/linearLayout1"
         android:choiceMode="multipleChoice" />
 
 </RelativeLayout>
